--- a/authors.html
+++ b/authors.html
@@ -72,12 +72,12 @@
         <div class="container py-5">
             <div class="row justify-content-center">
                 <div class="col-lg-10 text-center">
-                    <h1 class="display-3 text-white animated slideInDown">Kontakt</h1>
+                    <h1 class="display-3 text-white animated slideInDown">Mualliflar</h1>
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb justify-content-center">
                             <li class="breadcrumb-item"><a class="text-white" href="#">Bosh sahifa</a></li>
                             <li class="breadcrumb-item"><a class="text-white" href="#">Sahifalar</a></li>
-                            <li class="breadcrumb-item text-white active" aria-current="page">Kontakt</li>
+                            <li class="breadcrumb-item text-white active" aria-current="page">Mualliflar</li>
                         </ol>
                     </nav>
                 </div>
@@ -87,88 +87,62 @@
     <!-- Header End -->
 
 
-    <!-- Contact Start -->
+    <!-- Testimonial Start -->
     <div class="container-xxl py-5">
         <div class="container">
             <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
-                <h1 class="mb-5">Biz bilan bog'lanish!</h1>
+                <h1 class="mb-5">Mualliflar</h1>
             </div>
             <div class="row g-4">
-                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-                    <h5>Manzil</h5>
-                    <p class="mb-4">O'zbekiston Respublikasi Toshkent Shahri Amir Temur Shox ko'chasi 108-uy <a target="_blank" href="https://www.google.com/maps/place/National+Library+of+Uzbekistan/@41.3168088,69.2718214,17z/data=!3m1!4b1!4m6!3m5!1s0x38ae8b2a6565712d:0x790feb8933429946!8m2!3d41.3168048!4d69.2743963!16s%2Fm%2F03d5zfc?entry=ttu" class="text-success">Xaritada Ko'rish</a>.</p>
-                    <div class="d-flex align-items-center mb-3">
-                        <div class="d-flex align-items-center justify-content-center flex-shrink-0 bg-success" style="width: 50px; height: 50px;">
-                            <i class="fa fa-map-marker-alt text-white"></i>
+                <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                    <div class="team-item bg-success text-white">
+                        <div class="overflow-hidden">
+                            <img class="img-fluid" src="img/abdulla-qodiriy.jpg" alt="" width="100%">
                         </div>
-                        <div class="ms-3">
-                            <h5 class="text-success">Office</h5>
-                            <p class="mb-0">Toshkent Shahar  Amir Temur Shox ko'chasi 108</p>
-                        </div>
-                    </div>
-                    <div class="d-flex align-items-center mb-3">
-                        <div class="d-flex align-items-center justify-content-center flex-shrink-0 bg-success" style="width: 50px; height: 50px;">
-                            <i class="fa fa-phone-alt text-white"></i>
-                        </div>
-                        <div class="ms-3">
-                            <h5 class="text-success">Telefon</h5>
-                            <p class="mb-0">+998-97-777-77-77</p>
-                        </div>
-                    </div>
-                    <div class="d-flex align-items-center">
-                        <div class="d-flex align-items-center justify-content-center flex-shrink-0 bg-success" style="width: 50px; height: 50px;">
-                            <i class="fa fa-envelope-open text-white"></i>
-                        </div>
-                        <div class="ms-3">
-                            <h5 class="text-success">Email</h5>
-                            <p class="mb-0">library@example.com</p>
+                        <div class="text-center p-4">
+                            <h5 class="mb-0">Abdulla Qodiriy</h5>
+                            <small>Yozuvchi</small>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
-                    <iframe class="position-relative rounded w-100 h-100"
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3001156.4288297426!2d-78.01371936852176!3d42.72876761954724!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4ccc4bf0f123a5a9%3A0xddcfc6c1de189567!2sNew%20York%2C%20USA!5e0!3m2!1sen!2sbd!4v1603794290143!5m2!1sen!2sbd"
-                        frameborder="0" style="min-height: 300px; border:0;" allowfullscreen="" aria-hidden="false"
-                        tabindex="0"></iframe>
-                </div>
-                <div class="col-lg-4 col-md-12 wow fadeInUp" data-wow-delay="0.5s">
-                    <form>
-                        <div class="row g-3">
-                            <div class="col-md-6">
-                                <div class="form-floating">
-                                    <input type="text" class="form-control" id="name" placeholder="Your Name">
-                                    <label for="name">Ismingiz</label>
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="form-floating">
-                                    <input type="email" class="form-control" id="email" placeholder="Your Email">
-                                    <label for="email">Elektron pochtangiz</label>
-                                </div>
-                            </div>
-                            <div class="col-12">
-                                <div class="form-floating">
-                                    <input type="text" class="form-control" id="subject" placeholder="Subject">
-                                    <label for="subject">Kitob nomi</label>
-                                </div>
-                            </div>
-                            <div class="col-12">
-                                <div class="form-floating">
-                                    <textarea class="form-control" placeholder="Leave a message here" id="message" style="height: 150px"></textarea>
-                                    <label for="message">Xabar</label>
-                                </div>
-                            </div>
-                            <div class="col-12">
-                                <button class="btn btn-success w-100 py-3" type="submit">Xabarni yuborish</button>
-                            </div>
+                <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+                    <div class="team-item bg-success text-white">
+                        <div class="overflow-hidden" style="height: 380px;">
+                            <img class="img-fluid" src="img/toxtaboyev.jpg" alt="" width="100%">
                         </div>
-                    </form>
+                        <div class="text-center p-4">
+                            <h5 class="mb-0">Xudoyberdi To'xtaboyev</h5>
+                            <small>Yozuvchi</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
+                    <div class="team-item bg-success text-white">
+                        <div class="overflow-hidden" style="height: 380px;">
+                            <img class="img-fluid" src="img/pirimqul.jpg" alt="" width="100%">
+                        </div>
+                        <div class="text-center p-4">
+                            <h5 class="mb-0">Pirimqul Qodirov</h5>
+                            <small>Yozuvchi</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
+                    <div class="team-item bg-success text-white">
+                        <div class="overflow-hidden" style="height: 380px;">
+                            <img class="img-fluid" src="img/pirimqul.jpg" alt="" width="100%">
+                        </div>
+                        <div class="text-center p-4">
+                            <h5 class="mb-0">Pirimqul Qodirov</h5>
+                            <small>Yozuvchi</small>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-    <!-- Contact End -->
-
+    <!-- Testimonial End -->
+        
 
     <!-- Footer Start -->
     <footer>
