--- a/subject.html
+++ b/subject.html
@@ -41,161 +41,50 @@
     <!-- Spinner End -->
 
 
-    <header>
-        <!-- Navbar Start -->
-        <nav class="navbar navbar-expand-lg bg-white navbar-light shadow sticky-top p-0">
-            <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
-                <h2 class="m-0 text-success">BookShop</h2>
-            </a>
-            <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarCollapse">
-                <div class="navbar-nav ms-auto p-4 p-lg-0">
-                    <a href="index.html" class="nav-item nav-link active">Bosh sahifa</a>
-                    <!-- <a href="about.html" class="nav-item nav-link">Biz haqimizda</a> -->
-                    <a href="subject.html" class="nav-item nav-link">Mavzular</a>
-                    <div class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Sahifalar</a>
-                        <div class="dropdown-menu fade-down m-0">
-                            <a href="all-book.html" class="dropdown-item">Barcha kitoblar</a>
-                            <a href="authors.html" class="dropdown-item">Mualliflar</a>
-                        </div>
-                    </div>
-                    <a href="contact.html" class="nav-item nav-link">Kontakt</a>
-                </div>
-            </div>
-        </nav>
-        <!-- Navbar End -->
-    </header>
-
-
-    <main>
-        <!-- Carousel Start -->
-    <div class="container-fluid p-0 mb-5">
-        <div class="owl-carousel header-carousel position-relative">
-            <div class="owl-carousel-item position-relative">
-                <img class="img-fluid" src="img/book-shop.jpg" alt="">
-                <div class="position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center" style="background: rgba(24, 29, 56, .7);">
-                    <div class="container">
-                        <div class="row justify-content-start">
-                            <div class="col-sm-10 col-lg-8">
-                                <h5 class="text-success text-uppercase mb-3 animated slideInDown">Eng yaxshi kitob</h5>
-                                <h1 class="display-3 text-white animated slideInDown">Biz bilan kitob mutoala qiling!</h1>
-                                <p class="fs-5 text-white mb-4 pb-2">O'zingiz yoqtirgan kitobni tanlang va buyurtma bering. Biz sizga kitobingizni yetkazib beramiz. Kitob o'qish biz bilan yanada oson</p>
-                                <a href="" class="btn btn-success py-md-3 px-md-5 me-3 animated slideInLeft">Batafsil</a>
-                                <a href="" class="btn btn-light py-md-3 px-md-5 animated slideInRight">Kirish</a>
-                            </div>
-                        </div>
+    <!-- Navbar Start -->
+    <nav class="navbar navbar-expand-lg bg-white navbar-light shadow sticky-top p-0">
+        <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
+            <h2 class="m-0 text-success">BookShop</h2>
+        </a>
+        <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+            <div class="navbar-nav ms-auto p-4 p-lg-0">
+                <a href="index.html" class="nav-item nav-link active">Bosh sahifa</a>
+                <a href="subject.html" class="nav-item nav-link">Mavzular</a>
+                <div class="nav-item dropdown">
+                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Sahifalar</a>
+                    <div class="dropdown-menu fade-down m-0">
+                        <a href="all-book.html" class="dropdown-item">Barcha kitoblar</a>
+                        <a href="authors.html" class="dropdown-item">Mualliflar</a>
                     </div>
                 </div>
+                <a href="contact.html" class="nav-item nav-link">Kontakt</a>
             </div>
-            <div class="owl-carousel-item position-relative">
-                <img class="img-fluid" src="img/book-shop.jpg" alt="">
-                <div class="position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center" style="background: rgba(24, 29, 56, .7);">
-                    <div class="container">
-                        <div class="row justify-content-start">
-                            <div class="col-sm-10 col-lg-8">
-                                <h5 class="text-success text-uppercase mb-3 animated slideInDown">Eng yaxshi kitob</h5>
-                                <h1 class="display-3 text-white animated slideInDown">Biz bilan kitob mutoala qiling!</h1>
-                                <p class="fs-5 text-white mb-4 pb-2">O'zingiz yoqtirgan kitobni tanlang va buyurtma bering. Biz sizga kitobingizni yetkazib beramiz. Kitob o'qish biz bilan yanada oson</p>
-                                <a href="" class="btn btn-success py-md-3 px-md-5 me-3 animated slideInLeft">Batafsil</a>
-                                <a href="" class="btn btn-light py-md-3 px-md-5 animated slideInRight">Kirish</a>
-                            </div>
-                        </div>
-                    </div>
+        </div>
+    </nav>
+    <!-- Navbar End -->
+
+
+    <!-- Header Start -->
+    <div class="container-fluid bg-primary py-5 mb-5 page-header">
+        <div class="container py-5">
+            <div class="row justify-content-center">
+                <div class="col-lg-10 text-center">
+                    <h1 class="display-3 text-white animated slideInDown">Mavzular</h1>
+                    <nav aria-label="breadcrumb">
+                        <ol class="breadcrumb justify-content-center">
+                            <li class="breadcrumb-item"><a class="text-white" href="#">Bosh sahifa</a></li>
+                            <li class="breadcrumb-item"><a class="text-white" href="#">Sahifalar</a></li>
+                            <li class="breadcrumb-item text-white active" aria-current="page">Mavzular</li>
+                        </ol>
+                    </nav>
                 </div>
             </div>
         </div>
     </div>
-    <!-- Carousel End -->
-
-
-    <!-- Service Start -->
-    <div class="container-xxl py-5">
-        <div class="container">
-            <div class="row g-4">
-                <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.1s">
-                    <div class="service-item text-center pt-3 bg-success text-white">
-                        <div class="p-4">
-                            <i class="fa fa-3x fa-graduation-cap text-light mb-4"></i>
-                            <h5 class="mb-3 text-white">Ilmiy kitoblar</h5>
-                            <p>Ilmiy asarlar,ilmiy maqolalar va ilmiy janrdagi asarlar</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.3s">
-                    <div class="service-item text-center pt-3 bg-success text-white">
-                        <div class="p-4">
-                            <i class="fa fa-3x fa-globe text-light mb-4"></i>
-                            <h5 class="mb-3 text-white">Chet el asarlari</h5>
-                            <p>Dunyo miqyosidagi eng mashhur asarlar</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.5s">
-                    <div class="service-item text-center pt-3 bg-success text-white">
-                        <div class="p-4">
-                            <i class="fa fa-3x fa-home text-light mb-4"></i>
-                            <h5 class="mb-3 text-white">Sayohat kitoblari</h5>
-                            <p>Uyda yolg'iz qolganda vaqtni o'tkazish uchun mo'ljallangan</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.7s">
-                    <div class="service-item text-center pt-3 bg-success text-white">
-                        <div class="p-4">
-                            <i class="fa fa-3x fa-book-open text-light mb-4"></i>
-                            <h5 class="mb-3 text-white">Barcha turdagi kitoblar</h5>
-                            <p>Ilmiy,fantastik,sayohat va boshqa barcha janrdagi kitoblar</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Service End -->
-
-
-    <!-- About Start -->
-    <div class="container-xxl py-5">
-        <div class="container">
-            <div class="row g-5">
-                <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s" style="min-height: 400px;">
-                    <div class="position-relative h-100">
-                        <img class="img-fluid position-absolute w-100 h-100" src="img/book-1.jpg" alt="" style="object-fit: cover;">
-                    </div>
-                </div>
-                <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.3s">
-                    <h1 class="mb-4">BookShopga xush kelibsiz!</h1>
-                    <p class="mb-4">Biz bilan siz uydan chiqmagan holda o'zingiz yoqtirgan eng sevimli kitoblaringizni o'qishingiz mumkin. Eng asosiysi biz sizga sifatli xizmat ko'rsata olamiz.</p>
-                    <p class="mb-4">Bizni bilan siz quyidagi yutuqlarga erishishingiz mumkin. </p>
-                    <div class="row gy-2 gx-4 mb-4">
-                        <div class="col-sm-6">
-                            <p class="mb-0"><i class="fa fa-arrow-right text-success me-2"></i>Vaqtni mazmunli o'tkazish</p>
-                        </div>
-                        <div class="col-sm-6">
-                            <p class="mb-0"><i class="fa fa-arrow-right text-success me-2"></i>Dunyo qarashingizni o'zgartirish</p>
-                        </div>
-                        <div class="col-sm-6">
-                            <p class="mb-0"><i class="fa fa-arrow-right text-success me-2"></i>Ilmiy salohiyatni oshirish</p>
-                        </div>
-                        <div class="col-sm-6">
-                            <p class="mb-0"><i class="fa fa-arrow-right text-success me-2"></i>Yanada ko'p kitob mutoala qilish</p>
-                        </div>
-                        <div class="col-sm-6">
-                            <p class="mb-0"><i class="fa fa-arrow-right text-success me-2"></i>Online xizmatlarimizdan foydalanish</p>
-                        </div>
-                        <div class="col-sm-6">
-                            <p class="mb-0"><i class="fa fa-arrow-right text-success me-2"></i>Vaqtni tejash</p>
-                        </div>
-                    </div>
-                    <a class="btn btn-success py-3 px-5 mt-2" href="">Batafsil</a>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- About End -->
+    <!-- Header End -->
 
 
     <!-- Categories Start -->
@@ -334,67 +223,9 @@
         </div>
     </div>
     <!-- Courses End -->
-
-
-    <!-- Team Start -->
-    <div class="container-xxl py-5">
-        <div class="container">
-            <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
-                <h1 class="mb-5">Eng mashhur mualliflar</h1>
-            </div>
-            <div class="row g-4">
-                <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-                    <div class="team-item bg-success text-white">
-                        <div class="overflow-hidden">
-                            <img class="img-fluid" src="img/abdulla-qodiriy.jpg" alt="" width="100%">
-                        </div>
-                        <div class="text-center p-4">
-                            <h5 class="mb-0">Abdulla Qodiriy</h5>
-                            <small>Yozuvchi</small>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
-                    <div class="team-item bg-success text-white">
-                        <div class="overflow-hidden" style="height: 380px;">
-                            <img class="img-fluid" src="img/toxtaboyev.jpg" alt="" width="100%">
-                        </div>
-                        <div class="text-center p-4">
-                            <h5 class="mb-0">Xudoyberdi To'xtaboyev</h5>
-                            <small>Yozuvchi</small>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
-                    <div class="team-item bg-success text-white">
-                        <div class="overflow-hidden" style="height: 380px;">
-                            <img class="img-fluid" src="img/pirimqul.jpg" alt="" width="100%">
-                        </div>
-                        <div class="text-center p-4">
-                            <h5 class="mb-0">Pirimqul Qodirov</h5>
-                            <small>Yozuvchi</small>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
-                    <div class="team-item bg-success text-white">
-                        <div class="overflow-hidden" style="height: 380px;">
-                            <img class="img-fluid" src="img/pirimqul.jpg" alt="" width="100%">
-                        </div>
-                        <div class="text-center p-4">
-                            <h5 class="mb-0">Pirimqul Qodirov</h5>
-                            <small>Yozuvchi</small>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Team End -->
-
-    </main>
         
 
+    <!-- Footer Start -->
     <footer>
         <!-- Footer Start -->
         <div class="container-fluid bg-dark text-light footer pt-5 mt-5 wow fadeIn" data-wow-delay="0.1s">
@@ -430,6 +261,7 @@
         </div>
         <!-- Footer End -->
     </footer>
+    <!-- Footer End -->
 
 
     <!-- Back to Top -->
